--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,4 +12,4 @@
 @import url('./faq.css');
 @import url('./covers.css');
 @import url('./reviews.css');
-@import url('./work-together.css');
+@import url('./footer-work-together.css');
