--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,5 +1,58 @@
 <section class="sections-paddings">
   <div class="container">
-    <h2 class="section-title">benefits</h2>
+    <h2 class="section-title">Benefits of working with me</h2>
+    <ul class="cards-benefits">
+      <li class="item-benefits">
+        <a class="icon-li-link" href="" target="_blank">
+          <svg class="icon-li" width="24" height="24">
+            <use href=""></use>
+          </svg>
+        </a>
+        <h3 class="title-benefits">Expertise</h3>
+        <p class="text-benefits">
+          As a highly experienced developer, I have deep knowledge of
+          programming and website development.
+        </p>
+      </li>
+      <li class="item-benefits">
+        <a class="icon-li-link" href="" target="_blank">
+          <svg class="icon-li" width="24" height="24">
+            <use href=""></use>
+          </svg>
+        </a>
+        <h3 class="title-benefits">Communication</h3>
+        <p class="text-benefits">
+          Understanding your needs and wants is my priority and I am always open
+          to discussions and corrections.
+        </p>
+      </li>
+      <li class="item-benefits">
+        <a class="icon-li-link" href="" target="_blank">
+          <svg class="icon-li" width="24" height="24">
+            <use href=""></use>
+          </svg>
+        </a>
+        <h3 class="title-benefits">Art</h3>
+        <p class="text-benefits">
+          Thanks to my creative nature, I am ready to accept challenges and help
+          you bring your ideas to life.
+        </p>
+      </li>
+      <li class="item-benefits">
+        <a class="icon-li-link" href="" target="_blank">
+          <svg class="icon-li" width="24" height="24">
+            <use href=""></use>
+          </svg>
+        </a>
+        <h3 class="title-benefits">Urgent execution</h3>
+        <p class="text-benefits">
+          I understand how important time is to you. Ready to work quickly and
+          efficiently, without reducing the quality of work.
+        </p>
+      </li>
+    </ul>
+    <button class="btn-order-the-project" type="button">
+      <a class="btn-text-order" href="#work-together">Order the project</a>
+    </button>
   </div>
 </section>
