--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -1,5 +1,431 @@
-<section class="sections-paddings">
-  <div class="container">
-    <h2 class="section-title">Covers</h2>
+<section class="sections-paddings covers-section-js">
+  <div class="covers-content">
+    <h2 class="visually-hidden">Covers</h2>
+
+    <div class="covers-marquee">
+      <ul class="covers-marquee-inner">
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project7@1.png 1x,
+                ../img/covers/project7@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project7@1.png"
+              alt="energy flow banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project1@1.png 1x,
+                ../img/covers/project1@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project1@1.png"
+              alt="power pulse banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project2@1.png 1x,
+                ../img/covers/project2@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project2@1.png"
+              alt="mimino banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project3@1.png 1x,
+                ../img/covers/project3@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project3@1.png"
+              alt="vyshyvanka banner"
+              width="282"
+            />
+          </picture>
+        </li>
+
+        <!-- double -->
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project7@1.png 1x,
+                ../img/covers/project7@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project7@1.png"
+              alt="energy flow banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project1@1.png 1x,
+                ../img/covers/project1@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project1@1.png"
+              alt="power pulse banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project2@1.png 1x,
+                ../img/covers/project2@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project2@1.png"
+              alt="mimino banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project3@1.png 1x,
+                ../img/covers/project3@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project3@1.png"
+              alt="vyshyvanka banner"
+              width="282"
+            />
+          </picture>
+        </li>
+      </ul>
+
+      <ul class="covers-marquee-inner">
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project4@1.png 1x,
+                ../img/covers/project4@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project4@1.png"
+              alt="green harvest banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project5@1.png 1x,
+                ../img/covers/project5@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project5@1.png"
+              alt="wallet banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project6@1.png 1x,
+                ../img/covers/project6@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project6@1.png"
+              alt="chego banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project9@1.png 1x,
+                ../img/covers/project9@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project9@1.png"
+              alt="english excellence banner"
+              width="282"
+            />
+          </picture>
+        </li>
+
+        <!-- double -->
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project4@1.png 1x,
+                ../img/covers/project4@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project4@1.png"
+              alt="green harvest banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project5@1.png 1x,
+                ../img/covers/project5@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project5@1.png"
+              alt="wallet banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project6@1.png 1x,
+                ../img/covers/project6@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project6@1.png"
+              alt="chego banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project9@1.png 1x,
+                ../img/covers/project9@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project9@1.png"
+              alt="english excellence banner"
+              width="282"
+            />
+          </picture>
+        </li>
+      </ul>
+
+      <ul class="covers-marquee-inner">
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project8@1.png 1x,
+                ../img/covers/project8@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project8@1.png"
+              alt="fruit box banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project7@1.png 1x,
+                ../img/covers/project7@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project7@1.png"
+              alt="energy flow banner"
+              width="282"
+            />
+          </picture>
+        </li>
+
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project10@1.png 1x,
+                ../img/covers/project10@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project10@1.png"
+              alt="starlight studio banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project1@1.png 1x,
+                ../img/covers/project1@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project1@1.png"
+              alt="power pulse banner"
+              width="282"
+            />
+          </picture>
+        </li>
+
+        <!-- double -->
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project8@1.png 1x,
+                ../img/covers/project8@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project8@1.png"
+              alt="fruit box banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project7@1.png 1x,
+                ../img/covers/project7@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project7@1.png"
+              alt="energy flow banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project10@1.png 1x,
+                ../img/covers/project10@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project10@1.png"
+              alt="starlight studio banner"
+              width="282"
+            />
+          </picture>
+        </li>
+        <li class="covers-marquee__line covers-marquee__line-js">
+          <picture>
+            <source
+              srcset="
+                ../img/covers/project1@1.png 1x,
+                ../img/covers/project1@2.png 2x
+              "
+            />
+
+            <img
+              class="covers-marquee-img"
+              src="../img/covers/project1@1.png"
+              alt="power pulse banner"
+              width="282"
+            />
+          </picture>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
