--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -1,4 +1,183 @@
-h1,
-h2 {
-  color: brown;
+/* ABOUT-ME SECTION STYLES */
+
+/* DESCRIPTION STYLES */
+.about-me-description-wrapper {
+  border-radius: 24px;
+  width: 343px;
+  height: 500px;
+  padding: 32px 32px 0px 32px;
+  margin-bottom: 16px;
+
+  background: #242527;
+}
+
+.about-me-description {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16667;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  color: #fafafa;
+}
+
+.about-me-description-green {
+  color: #c6e327;
+}
+.about-me-description-gray {
+  color: rgba(250, 250, 250, 0.4);
+}
+
+.about-me-image {
+  margin-bottom: 32px;
+}
+
+/* ABOUT-ME-LIST STYLES */
+.about-me-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  margin-bottom: 32px;
+}
+
+.about-me-item {
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(250, 250, 250, 0.2);
+}
+.about-me-ac-wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+
+  width: 343px;
+  height: 36px;
+  margin-bottom: 12px;
+}
+
+.about-me-subtitle {
+  margin-bottom: 24px;
+
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+  color: rgba(250, 250, 250, 0.4);
+}
+
+.about-me-ac-btn {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+
+  background-color: inherit;
+  border: 1px solid rgba(250, 250, 250, 0.2);
+  border-radius: 100px;
+  padding: 9px;
+  width: 36px;
+  height: 36px;
+}
+
+.about-me-first-sublist {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 32px;
+}
+.about-me-sublist {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.about-me-subitem {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+}
+
+.about-me-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+}
+
+/* ACOORDION STYLES  */
+
+.ac .ac-panel {
+  overflow: hidden;
+  transition-property: height, visibility;
+  transition-timing-function: ease;
+}
+
+.ac.js-enabled .ac-panel {
+  visibility: hidden;
+}
+
+.ac.is-active .ac-panel {
+  visibility: visible;
+}
+
+.ac.is-active .about-me-ac-icon {
+  transform: rotate(180deg);
+}
+
+/* SKILLS-LIST STYLES */
+
+.skills-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.skills-list {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 0px;
+}
+
+.skills-item.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 130px;
+
+  border: 1px solid rgba(250, 250, 250, 0.2);
+  border-radius: 100px;
+
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.skills-swip-btn-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 83px;
+  height: 130px;
+}
+
+.skills-swip-btn {
+  background-color: inherit;
+  border: none;
+}
+
+.skills-swip-icon {
+  opacity: 0.2;
+}
+
+/* SWIPER STYLES */
+
+.skills-swip-wrapper.swiper {
+  display: flex;
+  width: 260px;
+  margin-left: 0;
+  margin-right: 0;
+}
+.swiper-slide-active {
+  background-color: #c6e327;
 }
