--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -8,14 +8,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project7@1.png 1x,
-                ../img/covers/project7@2.png 2x
+                ./img/covers/project7@1.png 1x,
+                ./img/covers/project7@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project7@1.png"
+              src="./img/covers/project7@1.png"
               alt="energy flow banner"
               width="282"
             />
@@ -25,14 +25,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project1@1.png 1x,
-                ../img/covers/project1@2.png 2x
+                ./img/covers/project1@1.png 1x,
+                ./img/covers/project1@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project1@1.png"
+              src="./img/covers/project1@1.png"
               alt="power pulse banner"
               width="282"
             />
@@ -42,14 +42,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project2@1.png 1x,
-                ../img/covers/project2@2.png 2x
+                ./img/covers/project2@1.png 1x,
+                ./img/covers/project2@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project2@1.png"
+              src="./img/covers/project2@1.png"
               alt="mimino banner"
               width="282"
             />
@@ -59,14 +59,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project3@1.png 1x,
-                ../img/covers/project3@2.png 2x
+                ./img/covers/project3@1.png 1x,
+                ./img/covers/project3@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project3@1.png"
+              src="./img/covers/project3@1.png"
               alt="vyshyvanka banner"
               width="282"
             />
@@ -78,14 +78,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project7@1.png 1x,
-                ../img/covers/project7@2.png 2x
+                ./img/covers/project7@1.png 1x,
+                ./img/covers/project7@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project7@1.png"
+              src="./img/covers/project7@1.png"
               alt="energy flow banner"
               width="282"
             />
@@ -95,14 +95,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project1@1.png 1x,
-                ../img/covers/project1@2.png 2x
+                ./img/covers/project1@1.png 1x,
+                ./img/covers/project1@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project1@1.png"
+              src="./img/covers/project1@1.png"
               alt="power pulse banner"
               width="282"
             />
@@ -112,14 +112,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project2@1.png 1x,
-                ../img/covers/project2@2.png 2x
+                ./img/covers/project2@1.png 1x,
+                ./img/covers/project2@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project2@1.png"
+              src="./img/covers/project2@1.png"
               alt="mimino banner"
               width="282"
             />
@@ -129,14 +129,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project3@1.png 1x,
-                ../img/covers/project3@2.png 2x
+                ./img/covers/project3@1.png 1x,
+                ./img/covers/project3@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project3@1.png"
+              src="./img/covers/project3@1.png"
               alt="vyshyvanka banner"
               width="282"
             />
@@ -149,14 +149,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project4@1.png 1x,
-                ../img/covers/project4@2.png 2x
+                ./img/covers/project4@1.png 1x,
+                ./img/covers/project4@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project4@1.png"
+              src="./img/covers/project4@1.png"
               alt="green harvest banner"
               width="282"
             />
@@ -166,14 +166,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project5@1.png 1x,
-                ../img/covers/project5@2.png 2x
+                ./img/covers/project5@1.png 1x,
+                ./img/covers/project5@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project5@1.png"
+              src="./img/covers/project5@1.png"
               alt="wallet banner"
               width="282"
             />
@@ -183,14 +183,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project6@1.png 1x,
-                ../img/covers/project6@2.png 2x
+                ./img/covers/project6@1.png 1x,
+                ./img/covers/project6@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project6@1.png"
+              src="./img/covers/project6@1.png"
               alt="chego banner"
               width="282"
             />
@@ -200,14 +200,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project9@1.png 1x,
-                ../img/covers/project9@2.png 2x
+                ./img/covers/project9@1.png 1x,
+                ./img/covers/project9@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project9@1.png"
+              src="./img/covers/project9@1.png"
               alt="english excellence banner"
               width="282"
             />
@@ -219,14 +219,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project4@1.png 1x,
-                ../img/covers/project4@2.png 2x
+                ./img/covers/project4@1.png 1x,
+                ./img/covers/project4@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project4@1.png"
+              src="./img/covers/project4@1.png"
               alt="green harvest banner"
               width="282"
             />
@@ -236,14 +236,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project5@1.png 1x,
-                ../img/covers/project5@2.png 2x
+                ./img/covers/project5@1.png 1x,
+                ./img/covers/project5@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project5@1.png"
+              src="./img/covers/project5@1.png"
               alt="wallet banner"
               width="282"
             />
@@ -253,14 +253,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project6@1.png 1x,
-                ../img/covers/project6@2.png 2x
+                ./img/covers/project6@1.png 1x,
+                ./img/covers/project6@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project6@1.png"
+              src="./img/covers/project6@1.png"
               alt="chego banner"
               width="282"
             />
@@ -270,14 +270,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project9@1.png 1x,
-                ../img/covers/project9@2.png 2x
+                ./img/covers/project9@1.png 1x,
+                ./img/covers/project9@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project9@1.png"
+              src="./img/covers/project9@1.png"
               alt="english excellence banner"
               width="282"
             />
@@ -290,14 +290,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project8@1.png 1x,
-                ../img/covers/project8@2.png 2x
+                ./img/covers/project8@1.png 1x,
+                ./img/covers/project8@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project8@1.png"
+              src="./img/covers/project8@1.png"
               alt="fruit box banner"
               width="282"
             />
@@ -307,14 +307,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project7@1.png 1x,
-                ../img/covers/project7@2.png 2x
+                ./img/covers/project7@1.png 1x,
+                ./img/covers/project7@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project7@1.png"
+              src="./img/covers/project7@1.png"
               alt="energy flow banner"
               width="282"
             />
@@ -325,14 +325,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project10@1.png 1x,
-                ../img/covers/project10@2.png 2x
+                ./img/covers/project10@1.png 1x,
+                ./img/covers/project10@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project10@1.png"
+              src="./img/covers/project10@1.png"
               alt="starlight studio banner"
               width="282"
             />
@@ -342,14 +342,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project1@1.png 1x,
-                ../img/covers/project1@2.png 2x
+                ./img/covers/project1@1.png 1x,
+                ./img/covers/project1@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project1@1.png"
+              src="./img/covers/project1@1.png"
               alt="power pulse banner"
               width="282"
             />
@@ -361,14 +361,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project8@1.png 1x,
-                ../img/covers/project8@2.png 2x
+                ./img/covers/project8@1.png 1x,
+                ./img/covers/project8@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project8@1.png"
+              src="./img/covers/project8@1.png"
               alt="fruit box banner"
               width="282"
             />
@@ -378,14 +378,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project7@1.png 1x,
-                ../img/covers/project7@2.png 2x
+                ./img/covers/project7@1.png 1x,
+                ./img/covers/project7@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project7@1.png"
+              src="./img/covers/project7@1.png"
               alt="energy flow banner"
               width="282"
             />
@@ -395,14 +395,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project10@1.png 1x,
-                ../img/covers/project10@2.png 2x
+                ./img/covers/project10@1.png 1x,
+                ./img/covers/project10@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project10@1.png"
+              src="./img/covers/project10@1.png"
               alt="starlight studio banner"
               width="282"
             />
@@ -412,14 +412,14 @@
           <picture>
             <source
               srcset="
-                ../img/covers/project1@1.png 1x,
-                ../img/covers/project1@2.png 2x
+                ./img/covers/project1@1.png 1x,
+                ./img/covers/project1@2.png 2x
               "
             />
 
             <img
               class="covers-marquee-img"
-              src="../img/covers/project1@1.png"
+              src="./img/covers/project1@1.png"
               alt="power pulse banner"
               width="282"
             />
