html amd css hero section added

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,54 @@
 <section>
-  <div class="container">
-    <h1 class="section-title">hero</h1>
+  <div class="hero container">
+    <h1 class="hero-title section-title">
+      hello. i'm fullstack developer lloyd jefferson.
+    </h1>
+
+    <div class="social-links">
+      <ul class="social-links-list">
+        <li class="social-links-item">
+          <a
+            class="social-links-icon"
+            href="https://www.instagram.com/goitclub/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >IG</a
+          >
+        </li>
+
+        <li class="social-links-item">
+          <a
+            class="social-links-icon"
+            href="https://www.facebook.com/goITclub/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >FB</a
+          >
+        </li>
+        <li class="social-links-item">
+          <a
+            class="social-links-icon"
+            href="https://www.youtube.com/c/GoIT"
+            target="_blank"
+            rel="noopener noreferrer"
+            >YT</a
+          >
+        </li>
+        <li class="social-links-item">
+          <a
+            class="social-links-icon"
+            href="https://github.com/YOUR_TEAM_PROJECT"
+            target="_blank"
+            rel="noopener noreferrer"
+            >GH</a
+          >
+        </li>
+        <li class="social-links-item social-email">
+          <a class="social-links-icon" href="mailto:lloydjefferson@gmail.com"
+            >lloydjefferson@gmail.com</a
+          >
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
