--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,4 +1,142 @@
-h1,
-h2 {
-  color: brown;
+/* HERO MOBILE */
+
+.hero {
+  background-image: url(/img/hero/hero_mobile@1.png);
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 812px;
+}
+
+.hero-title {
+  font-family: 'Inter Tight', sans-serif;
+  font-size: 50px;
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: -0.03em;
+  padding: 281px 16px 212px 16px;
+  opacity: 1;
+  color: #fafafa;
+  text-transform: uppercase;
+}
+
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(/img/hero/hero_mobile@2.png);
+  }
+}
+
+.social-links {
+  display: flex;
+  list-style: none;
+  width: 342px;
+  margin-left: auto;
+}
+
+.social-links-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4px;
+}
+
+.social-links-item {
+  display: inline;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 12px;
+  border-radius: 60px;
+  border: 1px solid #fafafa;
+  width: 37px;
+  height: 37px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-links-icon {
+  color: #fafafa;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.social-links-item:hover {
+  border: 2px solid #fafafa;
+}
+
+.social-email {
+  width: 178px;
+}
+
+/* HERO TABLET */
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: url(/img/hero/hero_tablet@1.png);
+    overflow: hidden;
+    background-repeat: no-repeat;
+    height: 1024px;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero {
+      background-image: url(/img/hero/hero_tablet@2.png);
+    }
+  }
+
+  .hero-title {
+    font-size: 90px;
+    font-weight: 500;
+    line-height: 1;
+    padding-top: 300px;
+    padding-right: 104px;
+    padding-bottom: 187px;
+    padding-left: 32px;
+  }
+
+  .social-links {
+    width: 473px;
+  }
+
+  .social-links-item {
+    width: 55px;
+    height: 55px;
+  }
+
+  .social-email {
+    width: 223px;
+  }
+}
+
+/* HERO DESKTOP */
+
+@media screen and (min-width: 1440px) {
+  .hero {
+    background-image: url(/img/hero/hero@1.png);
+    overflow: hidden;
+    background-repeat: no-repeat;
+    height: 900px;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero {
+      background-image: url(/img/hero/hero@2.png);
+    }
+  }
+
+  .hero-title {
+    padding-top: 300px;
+    padding-right: 178px;
+    padding-bottom: 243px;
+    padding-left: 178px;
+  }
 }
