fix adaptiv version css and html benefits

--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -1,18 +1,10 @@
-h1,
-h2 {
-  color: brown;
-}
-
 /* Benefits section mobile */
 
 .cards-benefits {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
   margin-top: 32px;
   gap: 16px;
-  border-radius: 20px;
 }
 
 .item-benefits {
@@ -22,11 +14,9 @@ h2 {
 }
 
 .icon-li-link {
-  width: 48px;
-  height: 48px;
   padding: 12px;
   border-radius: 10px;
-  background-color: #ed3b44;
+  background-color: #c6e327;
 }
 
 .icon-li {
@@ -35,14 +25,11 @@ h2 {
 .title-benefits {
   margin-top: 64px;
   font-size: 20px;
-  text-align: left;
 }
 
 .text-benefits {
   margin-top: 8px;
   font-weight: 500;
-  font-size: 16px;
-
   /* line-height: 24px; */
   line-height: 1.5;
   letter-spacing: -0.02em;
@@ -51,10 +38,6 @@ h2 {
 
 .btn-order-the-project {
   margin-top: 32px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   padding: 18px 36px;
   border-radius: 60px;
   border: solid 1px rgba(250, 250, 250, 0.2);
@@ -82,10 +65,13 @@ h2 {
 }
 
 /* Benefits section desktop */
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1440px) {
   .cards-benefits {
+    margin-top: -24px;
+    margin-left: 412px;
   }
 
-  .item-benefits {
+  .btn-order-the-project {
+    margin-left: 412px;
   }
 }
