--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,7 +1,10 @@
 <section class="sections-paddings">
   <div class="container">
     <h2 class="section-title">Benefits of working with me</h2>
+
+    <!-- benefit cards -->
     <ul class="cards-benefits">
+      <!-- Expertise -->
       <li class="item-benefits">
         <a class="icon-li-link" href="" target="_blank">
           <svg class="icon-li" width="24" height="24">
@@ -14,6 +17,8 @@
           programming and website development.
         </p>
       </li>
+
+      <!-- Communication -->
       <li class="item-benefits">
         <a class="icon-li-link" href="" target="_blank">
           <svg class="icon-li" width="24" height="24">
@@ -26,6 +31,8 @@
           to discussions and corrections.
         </p>
       </li>
+
+      <!-- Art -->
       <li class="item-benefits">
         <a class="icon-li-link" href="" target="_blank">
           <svg class="icon-li" width="24" height="24">
@@ -38,6 +45,8 @@
           you bring your ideas to life.
         </p>
       </li>
+
+      <!-- Urgent execution -->
       <li class="item-benefits">
         <a class="icon-li-link" href="" target="_blank">
           <svg class="icon-li" width="24" height="24">
@@ -51,6 +60,8 @@
         </p>
       </li>
     </ul>
+
+    <!-- order the project button -->
     <button class="btn-order-the-project" type="button">
       <a class="btn-text-order" href="#work-together">Order the project</a>
     </button>
