--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,11 +4,11 @@
       hello. i'm fullstack developer lloyd jefferson.
     </h1>
 
-    <div class="social-links">
-      <ul class="social-links-list">
-        <li class="social-links-item">
+    <div class="hero-social-links">
+      <ul class="hero-social-links-list">
+        <li class="hero-social-links-item">
           <a
-            class="social-links-icon"
+            class="hero-social-links-icon"
             href="https://www.instagram.com/goitclub/"
             target="_blank"
             rel="noopener noreferrer"
@@ -16,35 +16,37 @@
           >
         </li>
 
-        <li class="social-links-item">
+        <li class="hero-social-links-item">
           <a
-            class="social-links-icon"
+            class="hero-social-links-icon"
             href="https://www.facebook.com/goITclub/"
             target="_blank"
             rel="noopener noreferrer"
             >FB</a
           >
         </li>
-        <li class="social-links-item">
+        <li class="hero-social-links-item">
           <a
-            class="social-links-icon"
+            class="hero-social-links-icon"
             href="https://www.youtube.com/c/GoIT"
             target="_blank"
             rel="noopener noreferrer"
             >YT</a
           >
         </li>
-        <li class="social-links-item">
+        <li class="hero-social-links-item">
           <a
-            class="social-links-icon"
-            href="https://github.com/YOUR_TEAM_PROJECT"
+            class="hero-social-links-icon"
+            href="https://github.com/Vlad-Rzaiev/nexgen-portfolio-team-project"
             target="_blank"
             rel="noopener noreferrer"
             >GH</a
           >
         </li>
-        <li class="social-links-item social-email">
-          <a class="social-links-icon" href="mailto:lloydjefferson@gmail.com"
+        <li class="hero-social-links-item hero-social-email">
+          <a
+            class="hero-social-links-icon"
+            href="mailto:lloydjefferson@gmail.com"
             >lloydjefferson@gmail.com</a
           >
         </li>
