--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -14,10 +14,10 @@
 
     <img
       class="about-me-image"
-      src="../img/about-me/aboutme_mobile@1.png"
+      src="./img/about-me/aboutme_mobile@1.png"
       srcset="
-        ../img/about-me/aboutme_mobile@1.png 1x,
-        ../img/about-me/aboutme_mobile@2.png 2x
+        ./img/about-me/aboutme_mobile@1.png 1x,
+        ./img/about-me/aboutme_mobile@2.png 2x
       "
       alt="me-photo"
       width="343"
@@ -30,11 +30,12 @@
       <li class="about-me-item ac">
         <div class="about-me-ac-wrapper ac-header">
           <h3 class="about-me-subtitle">ABOUT ME</h3>
-          <button class="about-me-ac-btn ac-trigger" type="button">
+          <button class="about-me-ac-btn ac-trigger" type="button"></button>
+          <div class="about-me-icon-wrapper">
             <svg class="about-me-ac-icon" width="18" height="18">
-              <use href="../img/sprite.svg#icon-arrow-down"></use>
+              <use href="./img/sprite.svg#icon-arrow-down"></use>
             </svg>
-          </button>
+          </div>
         </div>
         <div class="ac-panel">
           <ul class="about-me-first-sublist">
@@ -70,11 +71,12 @@
       <li class="about-me-item ac">
         <div class="about-me-ac-wrapper ac-header">
           <h3 class="about-me-subtitle">ROLE</h3>
-          <button class="about-me-ac-btn ac-trigger" type="button">
+          <button class="about-me-ac-btn ac-trigger" type="button"></button>
+          <div class="about-me-icon-wrapper">
             <svg class="about-me-ac-icon" width="18" height="18">
-              <use href="../img/sprite.svg#icon-arrow-down"></use>
+              <use href="./img/sprite.svg#icon-arrow-down"></use>
             </svg>
-          </button>
+          </div>
         </div>
         <div class="ac-panel">
           <ul class="about-me-sublist">
@@ -88,11 +90,12 @@
       <li class="about-me-item ac">
         <div class="about-me-ac-wrapper ac-header">
           <h3 class="about-me-subtitle">EDUCATION</h3>
-          <button class="about-me-ac-btn ac-trigger" type="button">
+          <button class="about-me-ac-btn ac-trigger" type="button"></button>
+          <div class="about-me-icon-wrapper">
             <svg class="about-me-ac-icon" width="18" height="18">
-              <use href="../img/sprite.svg#icon-arrow-down"></use>
+              <use href="./img/sprite.svg#icon-arrow-down"></use>
             </svg>
-          </button>
+          </div>
         </div>
         <div class="ac-panel">
           <ul class="about-me-sublist">
@@ -127,7 +130,7 @@
       <div class="skills-swip-btn-wrapper swiper-button-next">
         <button class="skills-swip-btn" type="button">
           <svg class="skills-swip-icon" width="28" height="28">
-            <use href="../img/sprite.svg#icon-arrow-right"></use>
+            <use href="./img/sprite.svg#icon-arrow-right"></use>
           </svg>
         </button>
       </div>
