--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -5,16 +5,16 @@
   border-radius: 24px;
   width: 343px;
   height: 500px;
-  padding: 32px 32px 0px 32px;
+  padding: 32px;
   margin-bottom: 16px;
 
-  background: #242527;
+  background-color: #242527;
 }
 
 .about-me-description {
   font-weight: 500;
   font-size: 24px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: -0.03em;
   text-transform: uppercase;
   color: #fafafa;
@@ -48,6 +48,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  position: relative;
 
   width: 343px;
   height: 36px;
@@ -64,8 +65,23 @@
   text-transform: uppercase;
   color: rgba(250, 250, 250, 0.4);
 }
-
 .about-me-ac-btn {
+  position: absolute;
+  background-color: inherit;
+  border: none;
+
+  width: 100%;
+  height: 100%;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.about-me-ac-btn:focus,
+.about-me-ac-btn:active {
+  outline: none;
+  box-shadow: none;
+}
+
+.about-me-icon-wrapper {
   display: flex;
   align-items: center;
   flex-direction: row;
