--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -54,7 +54,7 @@
   border: 1px solid #fafafa;
   width: 37px;
   height: 37px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 100ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-social-links-icon {
@@ -102,8 +102,12 @@
     padding-left: 32px;
   }
 
+  .hero-social-links-list {
+    gap: 8px;
+  }
+
   .hero-social-links {
-    width: 473px;
+    width: 458px;
   }
 
   .hero-social-links-item {
