--- a/src/css/footer-work-together.css
+++ b/src/css/footer-work-together.css
@@ -10,7 +10,7 @@
   display: flex;
   align-items: flex-start;
   height: 100vh;
-  background-image: url(../img/elements.png);
+  background-image: url(../img/footer/elements.png);
   background-position: top right;
   background-size: contain;
   background-repeat: no-repeat;
