--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -5,21 +5,21 @@
   flex-direction: column;
   margin-top: 32px;
   gap: 16px;
+  margin-bottom: 50px;
 }
 
 .item-benefits {
   padding: 24px;
   border-radius: 20px;
-  background: #242527;
-}
-
-.icon-li-link {
-  padding: 12px;
-  border-radius: 10px;
-  background-color: #c6e327;
+  background-color: #242527;
 }
 
 .icon-li {
+  width: 48px;
+  height: 48px;
+  padding: 12px;
+  border-radius: 10px;
+  background-color: #c6e327;
 }
 
 .title-benefits {
@@ -36,15 +36,12 @@
   color: rgba(250, 250, 250, 0.6);
 }
 
-.btn-order-the-project {
-  margin-top: 32px;
+a:link,
+a:visited {
   padding: 18px 36px;
   border-radius: 60px;
   border: solid 1px rgba(250, 250, 250, 0.2);
   background-color: inherit;
-}
-
-.btn-text-order {
   color: #fafafa;
 }
 
@@ -54,13 +51,11 @@
   .cards-benefits {
     flex-direction: row;
     flex-wrap: wrap;
-  }
-  .item-benefits {
-    width: calc((100% - 16px) / 2);
+    margin-bottom: 82px;
   }
 
-  .btn-order-the-project {
-    margin-top: 64px;
+  .item-benefits {
+    width: calc((100% - 16px) / 2);
   }
 }
 
@@ -71,7 +66,8 @@
     margin-left: 412px;
   }
 
-  .btn-order-the-project {
+  a:link,
+  a:visited {
     margin-left: 412px;
   }
 }
