--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -3,15 +3,19 @@
     <h2 class="section-title">Benefits of working with me</h2>
 
     <!-- benefit cards -->
+
     <ul class="cards-benefits">
       <!-- Expertise -->
+
       <li class="item-benefits">
-        <a class="icon-li-link" href="" target="_blank">
-          <svg class="icon-li" width="24" height="24">
-            <use href=""></use>
+        <div class="icon-li">
+          <svg class="icon-user" width="24" height="24">
+            <use href="./img/sprite.svg#icon-user"></use>
           </svg>
-        </a>
+        </div>
+
         <h3 class="title-benefits">Expertise</h3>
+
         <p class="text-benefits">
           As a highly experienced developer, I have deep knowledge of
           programming and website development.
@@ -19,13 +23,16 @@
       </li>
 
       <!-- Communication -->
+
       <li class="item-benefits">
-        <a class="icon-li-link" href="" target="_blank">
-          <svg class="icon-li" width="24" height="24">
-            <use href=""></use>
+        <div class="icon-li">
+          <svg class="icon-chat-circle" width="24" height="24">
+            <use href="./img/sprite.svg#icon-chat-circle"></use>
           </svg>
-        </a>
+        </div>
+
         <h3 class="title-benefits">Communication</h3>
+
         <p class="text-benefits">
           Understanding your needs and wants is my priority and I am always open
           to discussions and corrections.
@@ -33,13 +40,16 @@
       </li>
 
       <!-- Art -->
+
       <li class="item-benefits">
-        <a class="icon-li-link" href="" target="_blank">
-          <svg class="icon-li" width="24" height="24">
-            <use href=""></use>
+        <div class="icon-li">
+          <svg class="icon-brush" width="24" height="24">
+            <use href="./img/sprite.svg#icon-brush"></use>
           </svg>
-        </a>
+        </div>
+
         <h3 class="title-benefits">Art</h3>
+
         <p class="text-benefits">
           Thanks to my creative nature, I am ready to accept challenges and help
           you bring your ideas to life.
@@ -47,13 +57,16 @@
       </li>
 
       <!-- Urgent execution -->
+
       <li class="item-benefits">
-        <a class="icon-li-link" href="" target="_blank">
-          <svg class="icon-li" width="24" height="24">
-            <use href=""></use>
+        <div class="icon-li">
+          <svg class="icon-hourglass" width="24" height="24">
+            <use href="./img/sprite.svg#icon-hourglass"></use>
           </svg>
-        </a>
+        </div>
+
         <h3 class="title-benefits">Urgent execution</h3>
+
         <p class="text-benefits">
           I understand how important time is to you. Ready to work quickly and
           efficiently, without reducing the quality of work.
@@ -61,9 +74,8 @@
       </li>
     </ul>
 
-    <!-- order the project button -->
-    <button class="btn-order-the-project" type="button">
-      <a class="btn-text-order" href="#work-together">Order the project</a>
-    </button>
+    <!-- order the project anchor link -->
+
+    <a href="#work-together">Order the project</a>
   </div>
 </section>
