--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -134,7 +134,7 @@
 
     <!-- SKILLS-LIST BLOCK -->
     <div class="skills-wrapper">
-      <div class="skills-swip-wrapper swiper">
+      <div class="skills-swip-wrapper swiper-one">
         <ul class="skills-list swiper-wrapper">
           <li class="skills-item swiper-slide">HTML/CSS</li>
           <li class="skills-item swiper-slide">JavaScript</li>
