--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -42,19 +42,22 @@
     </div>
 
     <!-- ABOUT-ME-LIST -->
-    <ul class="about-me-list accordion-container">
+    <ul class="about-me-list accordion-container-about-me">
       <!-- ABOUT-ME BLOCK -->
-      <li class="about-me-item ac">
+      <li class="about-me-item ac-about-me">
         <div class="about-me-ac-wrapper ac-header">
           <h3 class="about-me-subtitle">ABOUT ME</h3>
-          <button class="about-me-ac-btn ac-trigger" type="button"></button>
+          <button
+            class="about-me-ac-btn ac-trigger-about-me"
+            type="button"
+          ></button>
           <div class="about-me-icon-wrapper">
             <svg class="about-me-ac-icon" width="18" height="18">
               <use href="./img/sprite.svg#icon-arrow-down"></use>
             </svg>
           </div>
         </div>
-        <div class="ac-panel">
+        <div class="ac-panel-about-me">
           <ul class="about-me-first-sublist">
             <li class="about-me-subitem">
               <p class="about-me-text">
@@ -85,17 +88,20 @@
         </div>
       </li>
       <!-- ROLE BLOCK -->
-      <li class="about-me-item ac">
+      <li class="about-me-item ac-about-me">
         <div class="about-me-ac-wrapper ac-header">
           <h3 class="about-me-subtitle">ROLE</h3>
-          <button class="about-me-ac-btn ac-trigger" type="button"></button>
+          <button
+            class="about-me-ac-btn ac-trigger-about-me"
+            type="button"
+          ></button>
           <div class="about-me-icon-wrapper">
             <svg class="about-me-ac-icon" width="18" height="18">
               <use href="./img/sprite.svg#icon-arrow-down"></use>
             </svg>
           </div>
         </div>
-        <div class="ac-panel">
+        <div class="ac-panel-about-me">
           <ul class="about-me-sublist">
             <li class="about-me-subitem">Frontend development</li>
             <li class="about-me-subitem">HeadlessCMS, Wordpress</li>
@@ -104,17 +110,20 @@
         </div>
       </li>
       <!-- EDUCATION BLOCK -->
-      <li class="about-me-item ac">
+      <li class="about-me-item ac-about-me">
         <div class="about-me-ac-wrapper ac-header">
           <h3 class="about-me-subtitle">EDUCATION</h3>
-          <button class="about-me-ac-btn ac-trigger" type="button"></button>
+          <button
+            class="about-me-ac-btn ac-trigger-about-me"
+            type="button"
+          ></button>
           <div class="about-me-icon-wrapper">
             <svg class="about-me-ac-icon" width="18" height="18">
               <use href="./img/sprite.svg#icon-arrow-down"></use>
             </svg>
           </div>
         </div>
-        <div class="ac-panel">
+        <div class="ac-panel-about-me">
           <ul class="about-me-sublist">
             <li class="about-me-subitem">
               2018 - 2019 / Frontend Development Diploma, GoIT IT School, New
