--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -36,13 +36,17 @@
   color: rgba(250, 250, 250, 0.6);
 }
 
-a:link,
-a:visited {
+.benefits-link:link,
+.benefits-link:visited {
   padding: 18px 36px;
   border-radius: 60px;
   border: solid 1px rgba(250, 250, 250, 0.2);
   background-color: inherit;
-  color: #fafafa;
+}
+
+.benefits-link:hover,
+.benefits-link:focus {
+  border: 2px solid #fafafa;
 }
 
 /* Benefits section tablet */
@@ -63,11 +67,11 @@ a:visited {
 @media only screen and (min-width: 1440px) {
   .cards-benefits {
     margin-top: -24px;
-    margin-left: 412px;
+    margin-left: 696px;
   }
 
-  a:link,
-  a:visited {
-    margin-left: 412px;
+  .benefits-link:link,
+  .benefits-link:visited {
+    margin-left: 696px;
   }
 }
