--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -76,6 +76,6 @@
 
     <!-- order the project anchor link -->
 
-    <a href="#work-together">Order the project</a>
+    <a class="benefits-link" href="#work-together">Order the project</a>
   </div>
 </section>
